# chili

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.bat  build.rs  build.sh  rustfmt.toml  vm.out
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
chilic_check/: Cargo.toml
chilic_check/src/: check_assign.rs  check_entity.rs  check_expr.rs  check_fn.rs  check_pattern.rs  check_unary.rs
chilic_check/src/lints/: type_limits.rs
chilic_error/: Cargo.toml
chilic_infer/: Cargo.toml
chilic_infer/src/: coerce.rs  infer.rs  normalize.rs
chilic_ir/: Cargo.toml
chilic_ir/src/: entity.rs  expr.rs  lib.rs  module.rs  op.rs  path.rs  pattern.rs  value.rs
chilic_ir_gen/src/: ir_gen.rs  lib.rs
chilic_llvm/: Cargo.toml
chilic_llvm/src/: conditional.rs  ty.rs
chilic_main/: .gitignore
chilic_main/src/: main.rs
chilic_parse/: Cargo.toml
chilic_parse/src/: entity.rs  foreign.rs  func.rs  item.rs  lib.rs  pattern.rs  stmt.rs
chilic_span/src/: lib.rs
chilic_token/: Cargo.toml
chilic_token/src/: cursor.rs  lexer.rs  lib.rs  source.rs
chilic_ty/src/: align.rs  display.rs  hash.rs  lib.rs
chilic_vm/src/: ffi.rs  lib.rs  stack.rs
common/: Cargo.toml
common/src/: build_options.rs
compiler/chili_ast/: Cargo.toml
compiler/chili_ast/src/: ast.rs  compiler_info.rs  const_value.rs  lib.rs  path.rs  pattern.rs  pretty.rs  value.rs  workspace.rs
compiler/chili_ast/src/ty/: align.rs  display.rs  hash.rs  mod.rs  size.rs
compiler/chili_astgen/: Cargo.toml
compiler/chili_astgen/src/: lib.rs  multi_threaded.rs  single_threaded.rs  util.rs
compiler/chili_check/: Cargo.toml
compiler/chili_check/src/: bind.rs  builtin.rs  check_assign.rs  check_binary.rs  check_binding.rs  check_call.rs  check_expr.rs  check_fn.rs  check_pattern.rs  check_unary.rs  coerce.rs  defer.rs  display.rs  env.rs  environment.rs  import.rs  infer.rs  infer_top_level.rs  lib.rs  normalize.rs  resolver.rs  substitute.rs  top_level.rs  ty_ctx.rs  unify.rs  unpack_type.rs
compiler/chili_check/src/const_fold/: binary.rs  mod.rs
compiler/chili_check/src/lints/: mod.rs
compiler/chili_defer/: Cargo.toml
compiler/chili_driver/: Cargo.toml
compiler/chili_driver/src/: lib.rs
compiler/chili_infer/: Cargo.toml
compiler/chili_infer/src/: annotate.rs  builtin.rs  cast.rs  coerce.rs  display.rs  infer.rs  infer_top_level.rs  inference_value.rs  lib.rs  new_infer.rs  normalize.rs  sess.rs  substitute.rs  ty_ctx.rs  tycx.rs  unify.rs  unpack_type.rs
compiler/chili_infer_new/: Cargo.toml
compiler/chili_infer_new/src/: builtin.rs  cast.rs  coerce.rs  constraint.rs  display.rs  infer.rs  lib.rs  normalize.rs  sess.rs  substitute.rs  tvar.rs  ty.rs  ty_var.rs  tyctx.rs  tycx.rs  type_var.rs  unify.rs  union.rs  unpack_type.rs  utils.rs
compiler/chili_interp/: Cargo.toml
compiler/chili_interp/src/: byte_seq.rs  display.rs  ffi.rs  instruction.rs  interp.rs  lib.rs  lower.rs  old_interp.rs  pretty_print.rs  stack.rs  value.rs  vm.rs  workspace.rs
compiler/chili_interp/src/ffi/: mod.rs
compiler/chili_interp/src/vm/: byte_seq.rs  cast.rs  display.rs  index.rs  instruction.rs  intrinsics.rs  mod.rs  stack.rs  value.rs
compiler/chili_lint/: Cargo.toml
compiler/chili_lint/src/: access.rs  lib.rs  lvalue_access.rs  ref_access.rs  sess.rs  type_limits.rs
compiler/chili_llvm/: Cargo.toml
compiler/chili_llvm/src/: binary.rs  codegen.rs  conditional.rs  func.rs  lib.rs  literal.rs  mark_codegen.rs  panic.rs  runtime_check.rs  ty.rs  unary.rs  util.rs
compiler/chili_llvm/src/abi/: amd64_win64.rs
compiler/chili_main/: Cargo.toml  build.rs
compiler/chili_main/src/: build.rs  build_v2.rs  cli.rs  ide.rs  main.rs
compiler/chili_main/src/ide/: mod.rs  types.rs  util.rs
compiler/chili_parse/: Cargo.toml
compiler/chili_parse/src/: binding.rs  expr.rs  extern.rs  foreign.rs  func.rs  import.rs  lib.rs  literal.rs  pattern.rs  postfix_expr.rs  top_level.rs  ty.rs
compiler/chili_pretty_print/: Cargo.toml
compiler/chili_pretty_print/src/: lib.rs
compiler/chili_resolve/: Cargo.toml
compiler/chili_resolve/src/: builtin.rs  declare.rs  import.rs  lib.rs  mark_codegen.rs  resolve.rs  resolver.rs  scope.rs
compiler/chili_typeck/: Cargo.toml
compiler/chili_typeck/src/: cast.rs  check_assign.rs  check_binary.rs  check_binding.rs  check_call.rs  check_expr.rs  check_fn.rs  check_unary.rs  coerce.rs  lib.rs  typeck.rs
compiler/chilic_llvm/: Cargo.toml
compiler/chilic_llvm/src/: binary.rs  codegen.rs  conditional.rs  func.rs  lib.rs  literal.rs  panic.rs  runtime_check.rs  stmt.rs  ty.rs  unary.rs  util.rs
compiler/chilic_main/: Cargo.toml  README.md
compiler/chilic_main/src/: build.rs  build_v2.rs  cli.rs
compiler/chilic_parse/: Cargo.toml
compiler/chilic_parse/src/: entity.rs  expr.rs  foreign.rs  func.rs  item.rs  lib.rs  literal.rs  pattern.rs  postfix_expr.rs  stmt.rs  top_level.rs  ty.rs  use.rs
compiler/chilic_pass/: Cargo.toml
compiler/chilic_pass/src/: ast_generator.rs  ast_generator_v2.rs  defer.rs  expand_use_wildcard.rs  gen_ir.rs  lib.rs  solve_defer.rs
docs/: demo.chl  foo.chl  static.chl
examples/: _text_file_example.txt  bitmasks.chili  brainfuck.chili  bubble_sort_viz.chili  c.chili  cge.chili  dice.chili  fib.chili  fire_sim.chili  fizzbuzz.chili  foo.chili  guess_the_number.chili  hello_world.chl  immutability.chili  kernel32.chili  linked_list.chili  main.chili  mandelbrot.chili  noise.chili  rand.chili  raylib.chili  raylib_3d_cube.chili  raylib_bubble_sort_visualization.chili  raylib_following_eyes.chili  raylib_game_of_life.chili  raylib_mandelbrot.chili  raylib_rect_test.chili  raylib_water_ripples.chili  raylib_waving_cubes.chili  read_file_lines.chili  reverse_file_contents.chili  sort.chili  structs_person.chili  type_coercion.chili  user32.chili  waving_cubes.chili  win32_WriteFile.chili  win32_print.chili  windows.chili
src/: astgen.rs  driver.rs  main.rs  sym.rs
stdlib/: build.chl  c.chl  fmt.chl  intrinsics.chl  lib.chl  process.chl
(+406 files in other folders)
