[workspace]
members = [
    "compiler/common",
    "compiler/chili_span",
    "compiler/chili_error",
    "compiler/chili_ast",
    "compiler/chili_pretty_print",
    "compiler/chili_token",
    "compiler/chili_parse",
    "compiler/chili_astgen",
    "compiler/chili_infer",
    "compiler/chili_interp",
    "compiler/chili_check",
    "compiler/chili_lint",
    "compiler/chili_backend_llvm",
    "compiler/chili_driver",
    "compiler/chili_main",
]
exclude = ["./vendor/libffi-rs"]
