[package]
name = "chili"
version = "0.1.0"
edition = "2021"
exclude = ["vendor/inkwell", "vendor/libffi-rs"]

[[bin]]
name = "chili"
path = "src/main.rs"

[dependencies]
paste = "1.0.7"
strum_macros = "0.23.1"
ptree = "0.4.0"
ustr = "0.8.1"
path-absolutize = "3.0.11"
bitflags = "1.3.2"
indexmap = "1.8.2"
slab = "0.4.5"
parking_lot = "0.12.1"
threadpool = "1.8.1"
num_cpus = "1.13.1"
execute = "0.2.9"
colored = "2.0.0"
num-format = "0.4.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
libloading = "0.7.1"
byteorder = "1.4.3"
bumpalo = "3.9.1"
clap = { version = "3.1.9", features = ["derive"] }
serde = "1.0.137"
serde_json = "1.0.81"
unicode-xid = "0.2.2"
unindent = "0.1.7"
stopwatch = "0.0.7"
backtrace = "0.3.65"
enum-as-inner = "0.5.0"
itertools = "0.10.3"

# inkwell = { path = "vendor/inkwell", features = ["llvm12-0"] }
inkwell = { git = "https://github.com/r0nsha/inkwell", branch = "my-missing-features", features = [
  "llvm12-0",
] }


[target.'cfg(windows)'.dependencies]
libffi = { git = "https://github.com/r0nsha/libffi-rs" }

[target.'cfg(unix)'.dependencies]
libffi = { git = "https://github.com/r0nsha/libffi-rs", features = ["system"] }

[build-dependencies]
fs_extra = "1.2.0"
