[package]
name = "chilic_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ustr = "0.8.1"
chilic_span = { path = "../chilic_span" }
chilic_ty = { path = "../chilic_ty" }
