[package]
name = "chilic_infer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ena = "0.14.0"

common = { path = '../common' }
chilic_span = { path = '../chilic_span' }
chilic_error = { path = '../chilic_error' }
chilic_ty = { path = '../chilic_ty' }
chilic_ir = { path = '../chilic_ir' }
