[package]
name = "chilic_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ustr = "0.8.1"
strum_macros = "0.23.1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
unicode-xid = "0.2.2"

chilic_span = { path = "../chilic_span" }
chilic_error = { path = "../chilic_error" }
