[package]
name = "chili_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
strum_macros = "0.23.1"
ptree = "0.4.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ustr = "0.8.1"
path-absolutize = "3.0.11"
bitflags = "1.3.2"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_token = { path = "../chili_token" }
chili_error = { path = "../chili_error" }
