[package]
name = "chili_astgen"
version = "0.0.1"
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ustr = "0.8.1"
unindent = "0.1.7"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.7"
dashmap = "5.1.0"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_token = { path = "../chili_token" }
chili_error = { path = "../chili_error" }
chili_ty = { path = "../chili_ty" }
chili_parse = { path = "../chili_parse" }
chili_ast = { path = "../chili_ast" }
