[package]
name = "chili_check"
version = "0.0.1"
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ustr = "0.8.1"

chili_span = { path = "../chili_span" }
common = { path = "../common" }
chili_error = { path = "../chili_error" }
chili_ty = { path = "../chili_ty" }
chili_ast = { path = "../chili_ast" }
chili_typeck = { path = "../chili_typeck" }
