[package]
name = "chili_check"
version = "0.1.0"
edition = "2021"

[dependencies]
slab = "0.4.5"
ustr = "0.8.1"

common = { path = '../common' }
chili_span = { path = '../chili_span' }
chili_error = { path = '../chili_error' }
chili_ast = { path = '../chili_ast' }
chili_infer = { path = '../chili_infer' }
chili_interp = { path = '../chili_interp' }
