[package]
name = "chili_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
num-format = "0.4.0"
ustr = "0.8.1"
path-absolutize = "3.0.11"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_error = { path = "../chili_error" }
chili_ast = { path = "../chili_ast" }
chili_pretty_print = { path = "../chili_pretty_print" }
chili_astgen = { path = "../chili_astgen" }
chili_infer = { path = "../chili_infer" }
chili_check = { path = "../chili_check" }
chili_lint = { path = "../chili_lint" }
chili_backend_llvm = { path = "../chili_backend_llvm" }
