[package]
name = "chili_infer_new"
version = "0.1.0"
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ena = "0.14.0"

common = { path = '../common' }
chili_span = { path = '../chili_span' }
chili_error = { path = '../chili_error' }
chili_ast = { path = '../chili_ast' }
