[package]
name = "chili_interp"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.7"
colored = "2.0.0"
strum_macros = "0.23.1"
ustr = "0.8.1"
libloading = "0.7.1"
byteorder = "1.4.3"
bumpalo = "3.9.1"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_error = { path = "../chili_error" }
chili_ast = { path = "../chili_ast" }
chili_infer = { path = "../chili_infer" }

[target.'cfg(windows)'.dependencies]
libffi = { path = "../../vendor/libffi-rs/libffi-rs" }

[target.'cfg(unix)'.dependencies]
libffi = { path = "../../vendor/libffi-rs/libffi-rs", features = ["system"] }
