[package]
name = "chili_lint"
version = "0.1.0"
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
ustr = "0.8.1"

chili_span = { path = "../chili_span" }
common = { path = "../common" }
chili_error = { path = "../chili_error" }
chili_ast = { path = "../chili_ast" }
chili_infer = { path = "../chili_infer" }
