[package]
name = "chili_main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chilic"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
num-format = "0.4.0"
ustr = "0.8.1"
path-absolutize = "3.0.11"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_error = { path = "../chili_error" }
chili_ast = { path = "../chili_ast" }
chili_pretty_print = { path = "../chili_pretty_print" }
chili_astgen = { path = "../chili_astgen" }
chili_resolve = { path = "../chili_resolve" }
chili_check = { path = "../chili_check" }
chili_lint = { path = "../chili_lint" }
chili_defer = { path = "../chili_defer" }
# chili_backend_llvm = { path = "../chili_backend_llvm" }
