[package]
name = "chili_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
strum_macros = "0.23.1"
ptree = "0.4.0"
ustr = "0.8.1"
bitflags = "1.3.2"
unindent = "0.1.7"
parking_lot = "0.12.1"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_token = { path = "../chili_token" }
chili_error = { path = "../chili_error" }
chili_ast = { path = "../chili_ast" }
