[package]
name = "chili_pretty_print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptree = "0.4.0"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_token = { path = "../chili_token" }
chili_error = { path = "../chili_error" }
chili_ast = { path = "../chili_ast" }
chili_infer = { path = "../chili_infer" }
