[package]
name = "chili_resolve"
version = "0.1.0"
edition = "2021"


[dependencies]
ustr = "0.8.1"

common = { path = "../common" }
chili_span = { path = "../chili_span" }
chili_token = { path = "../chili_token" }
chili_error = { path = "../chili_error" }
chili_parse = { path = "../chili_parse" }
chili_ast = { path = "../chili_ast" }
