[package]
name = "chili_typeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
slab = "0.4.5"
ustr = "0.8.1"

common = { path = '../common' }
chili_span = { path = '../chili_span' }
chili_error = { path = '../chili_error' }
chili_ast = { path = '../chili_ast' }
chili_infer = { path = '../chili_infer' }
