[package]
name = "chilic_main"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "chilic"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
num-format = "0.4.0"
ustr = "0.8.1"
linked_hash_set = "0.1.4"
path-absolutize = "3.0.11"

common = { path = "../common" }
chilic_span = { path = "../chilic_span" }
chilic_error = { path = "../chilic_error" }
chilic_ast = { path = "../chilic_ast" }
chilic_ir_gen = { path = "../chilic_ir_gen" }
chilic_parse = { path = "../chilic_parse" }
chilic_check = { path = "../chilic_check" }
chilic_llvm = { path = "../chilic_llvm" }
